ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolf-ingress
spec:
  rules:
  # - host: wolfort.sample.com
  - http:
      paths:
      - path: /wolf-portal
        pathType: Prefix
        backend:
          service:
            name: wolf-portal
            port:
              number: 8080
      - path: /wolf-mansion
        pathType: Prefix
        backend:
          service:
            name: wolf-mansion
            port:
              number: 8081
      - path: /howling-wolf
        pathType: Prefix
        backend:
          service:
            name: howling-wolf
            port:
              number: 8086
      - path: /firewolf
        pathType: Prefix
        backend:
          service:
            name: firewolf
            port:
              number: 8087
      - path: /lastwolf
        pathType: Prefix
        backend:
          service:
            name: lastwolf
            port:
              number: 8088
